# Client-Server-2

./: CMakeLists.txt
include/: Device.hpp  DeviceClient.hpp  DeviceServer.hpp
src/: DeviceClient.cpp  DeviceServer.cpp  main_client.cpp  main_server.cpp
